Fixing overflow bug of photo profile

--- a/CSS/Home.css
+++ b/CSS/Home.css
@@ -44,13 +44,15 @@ body{
 
 /* Navigation */
 .navAndProfileContainer{
-    height: auto;
+    height: 100vh;
     width: 100%;
     position: relative;
-    overflow-y: visible;
+    display: flex;
+    flex-direction: column;
 }
 nav{
     width: 100%;
+    height: auto;
     padding-bottom: 1em;
     display: flex;
     align-items: center;
@@ -92,7 +94,7 @@ nav ul{
 
             /* Mobile navigation*/
             .mobileNavPanel{
-                height: 90%;
+                height: 100%;
                 width: 100%;
                 display: flex;
                 padding-top: 1em;
@@ -161,8 +163,6 @@ nav ul{
                 width: 100%;
                 display: flex;
                 flex-direction: column;
-                overflow-y: visible;
-
             }
 
             .photo{
@@ -204,9 +204,9 @@ nav ul{
             }
 
             .photo img{
-                width: 100%;
+                width: 80%;
                 z-index: 1;
-                
+                height: auto;
             }
 
             .biography{
@@ -330,7 +330,6 @@ nav ul{
     .photo img{
         height: 100%;
         width: auto;
-
     }
 
     .biography{
